viewport scrollbar, fixed canvas position

--- a/canvas.css
+++ b/canvas.css
@@ -3,7 +3,7 @@
 #tree,
 #spacer {
     /* border: 1px solid black; */
-    position: absolute;
+    position: fixed;
     left: 50%;
 }
 
